# analysis

./: mc_summary.org
data/: eff.cc  histo_gen.cc  histo_gen.h  tree_cut.cc  tree_cut_Etot.cc  tree_cut_application.cc  tree_cut_classification.cc  tree_cut_subset.cc  tree_cut_training.cc
multivariate/: Makefile  bdt_score.C  bdt_score_cc.C  bdt_score_simple.C  classification.C  classification_application.C  classification_application_old.C  classification_application_simple.C  classification_old.C  classification_simple.C  collie_io_bdt.cc  collie_io_bdt_simple.cc  collie_io_spectra.cc  collie_io_spectra_simple.cc  collie_setup.sh  config_sensitivity.h  gui.C  limit_calc.cc  limit_roostats_bdt.C  limit_roostats_roi.C  script_application.sh  script_application_cc.sh  script_application_simple.sh  script_bdt_collie_cc.sh  script_bdt_collie_limit_cc.sh  script_bdt_score_cc.sh  script_collie_limit_bdt.sh  script_collie_limit_spectra.sh  sensitivity.C  sensitivity_simple.C  spectra_2e.C  spectra_2e_simple.C
sensitivity/src/: analysis_config.cc  analysis_config.h  channel_selection.cc  main_sensitivity.cxx  multi_fit.cxx  pseudo_generator.cc  sensitivity_constants.h
sensitivity/src/activity_measurement/: activity_accuracy_exposure.C  activity_meas_accuracy.C  activity_sens_exposure.C
sensitivity/src/fits_pseudo/: display_fit_pseudo.C
sensitivity/src/limit/bayes/: CMakeLists.txt  main_bayes.cxx  main_bayes_example.cxx  pseudo_generator.cc  pseudo_generator.h  stats_tools.h
sensitivity/src/limit/collie/: Makefile  collie_io.cc  collie_setup.sh  limit_calc.cc
sensitivity/src/limit/fc/: analysis_config.h  edit_sensitivity.cc  quick_fc.cc  quick_fc_radon.cc  stats_tools.h
sensitivity/src/limit/roostats/: CMakeLists.txt  interval_examples.C  limit_gerda_model.C  limit_nemo.C  limit_simple_counting.C  local_root_setup.sh  rs101_limitexample.C  simple_interval_examples_limit.C  test_hist_pdf.C
sensitivity/src/pdf/: edit_pdf_distrib.C  edit_pdf_distrib_tl_bi_meas.C
sensitivity/src/topo_distrib/: topology_distribution_count.cc
